phase 3 achieved